--- a/251205_project/package.json
+++ b/251205_project/package.json
@@ -9,9 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.2.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
